<resources>
    <string name="app_name">CrazyCall</string>
    <string name="number">电话号码</string>
    <string name="call">疯狂打Call</string>
    <string name="tip_input_phone_number">请输入电话号码</string>
    <string name="stop">停止服务</string>
    <string name="start">开始服务</string>
    <string name="cancel">取消重播</string>
    <string name="count_down">将在%d秒后重试</string>
    <string name="crazy">请开始你疯狂的行为吧！！！</string>
</resources>